fix paragraph padding on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -338,7 +338,7 @@ header .site-nav {
   margin: auto;
   padding-top: 2em;
   p {
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 15px;
     @include media-query($on-palm) {
       sup {display: none;}
     }
